[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.5"
hyper = {version="0.14.13",features=["full"]}
tokio = { version = "1.11.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = "0.1.1"
tokio-stream = "0.1.7"
async-session = "3.0.0"
http = "0.2.4"
serde = "1.0.130"
chrono = "0.4.19"
rand = "0.8.4"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"